--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </div>
     <h1 class="text-center text-success d-none">Cảm ơn bạn nhiều nha :>. Bạn vừa chọn có đó nha :></h1>
     <h1 class="text-center text-danger d-none">Ơ bạn khum cho à buồn vậy :<<<<<</h1>
+    <div class="btn-position d-none" id="reset">
+        <a href="#" class="btn btn-secondary text-white btn-reset">Reset</a>
+    </div>
     <script src="./app.js" type="module"></script>
 </body>
 
